add memory settings to readme